[package]
name = "minecraftpingws"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
hickory-resolver = "0.25.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
